# work

./: .gitignore  1.sh  README.md  SECURITY.md  init_repo.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: 00_overview.md  01_design.md  02_algorithms.md  03_api.md  99_notes.md
src/drmstego/: __init__.py  cli.py  io_utils.py  metrics.py
src/drmstego/detect/: classical.py  ml.py
src/drmstego/drm/: license_token.py  watermark.py
src/drmstego/steg/: base.py  dct.py  dwt.py  lsb.py
src/server/: main.py  schemas.py
tests/: test_api.py  test_dwt.py  test_license_token.py  test_lsb.py  test_metrics.py  test_watermark.py
