[project]
name = "drmstego"
version = "0.1.0"
description = "Steganography-based Digital Rights Protection & Detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pillow",
  "numpy",
  "scipy",
  "scikit-image",
  "pydantic>=2",
  "typer",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = []

[tool.isort]
profile = "black"
